--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,7 +82,7 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$rootProject.ext.retrofitVersion"
     implementation "com.squareup.retrofit2:converter-gson:$rootProject.ext.retrofitVersion"
 
-    // IDLING RESOURCES
+    /*// IDLING RESOURCES
     implementation "androidx.test.espresso:espresso-idling-resource:3.2.0"
 
     // LOCAL UNIT TESTS
@@ -105,5 +105,5 @@ dependencies {
     androidTestImplementation "androidx.test.espresso:espresso-core:3.2.0"
     androidTestImplementation "androidx.test.espresso:espresso-contrib:3.2.0"
     androidTestImplementation "androidx.test.espresso:espresso-intents:3.2.0"
-    androidTestImplementation "androidx.test.espresso:espresso-idling-resource:3.2.0"
+    androidTestImplementation "androidx.test.espresso:espresso-idling-resource:3.2.0"*/
 }
