--- a/build.gradle
+++ b/build.gradle
@@ -37,9 +37,9 @@ ext {
     // Others dependencies
     cardviewVersion = "1.0.0"
     retrofitVersion = '2.7.1'
-    junitVersion = '4.12'
+    /*junitVersion = '4.12'
     mockitoVersion = '1.10.19'
     powerMockVersion = '1.6.6'
     hamcrestVersion = '1.3'
-    espressoVersion = '3.0.2'
+    espressoVersion = '3.0.2'*/
 }
