--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".view.HomeActivity"
+            android:name=".view.ui.HomeActivity"
             android:screenOrientation="portrait">
 
             <intent-filter>
@@ -23,11 +23,11 @@
         </activity>
 
         <activity
-            android:name=".view.ContactsActivity"
+            android:name=".view.ui.ContactsActivity"
             android:screenOrientation="portrait" />
 
         <activity
-            android:name=".view.HistoryActivity"
+            android:name=".view.ui.HistoryActivity"
             android:screenOrientation="portrait" />
     </application>
 </manifest>
