--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ android {
 
     sourceSets {
         mock { java.srcDirs = ['src/mock/java', 'src/mock/java/'] }
-        //prod { java.srcDirs = ['src/prod/java', 'src/prod/java/'] }
+        prod { java.srcDirs = ['src/prod/java', 'src/prod/java/'] }
         main { assets.srcDirs = ['src/main/assets', 'src/main/assets/'] }
     }
 
@@ -33,10 +33,10 @@ android {
         debug {
             testCoverageEnabled = true
         }
-        /*release {
+        release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }*/
+        }
     }
 
     flavorDimensions "version"
@@ -46,11 +46,11 @@ android {
             //applicationIdSuffix = ".mock"
             versionNameSuffix "-mock"
         }
-        /*prod {
+        prod {
             dimension "version"
             //applicationIdSuffix = ".prod"
             versionNameSuffix "-prod"
-        }*/
+        }
     }
 
     android.variantFilter { variant ->
@@ -82,6 +82,9 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$rootProject.ext.retrofitVersion"
     implementation "com.squareup.retrofit2:converter-gson:$rootProject.ext.retrofitVersion"
 
+    // RETROFIT
+    mockImplementation "com.squareup.retrofit2:retrofit:$rootProject.ext.retrofitVersion"
+    mockImplementation "com.squareup.retrofit2:converter-gson:$rootProject.ext.retrofitVersion"
     /*// IDLING RESOURCES
     implementation "androidx.test.espresso:espresso-idling-resource:3.2.0"
 
