--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,7 +74,7 @@ dependencies {
     implementation "com.google.android.material:material:1.1.0"
 
     // KOTLIN
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.2.0'
 
     // RETROFIT
@@ -85,21 +85,22 @@ dependencies {
     mockImplementation "com.squareup.retrofit2:retrofit:$rootProject.ext.retrofitVersion"
     mockImplementation "com.squareup.retrofit2:converter-gson:$rootProject.ext.retrofitVersion"
 
-    /*// IDLING RESOURCES
+    // IDLING RESOURCES
     implementation "androidx.test.espresso:espresso-idling-resource:3.2.0"
 
+    /*
     // LOCAL UNIT TESTS
     testImplementation "androidx.test.ext:junit:1.1.1"
     testImplementation "org.mockito:mockito-all:$rootProject.ext.mockitoVersion"
     testImplementation "org.powermock:powermock-module-junit4:$rootProject.ext.powerMockVersion"
     testImplementation "org.powermock:powermock-api-mockito:$rootProject.ext.powerMockVersion"
     testImplementation "org.hamcrest:hamcrest-all:$rootProject.ext.hamcrestVersion"
+    */
 
     // ANDROID TESTING SUPPORT LIBRARY'S RUNNER AND RULES
     androidTestImplementation 'androidx.test:core:1.2.0'
     androidTestImplementation "androidx.test:runner:1.2.0"
     androidTestImplementation "androidx.test:rules:1.2.0"
-
     androidTestImplementation "androidx.test.ext:junit:1.1.1"
     androidTestImplementation 'androidx.test.ext:truth:1.2.0'
     androidTestImplementation 'com.google.truth:truth:1.0.1'
@@ -108,5 +109,5 @@ dependencies {
     androidTestImplementation "androidx.test.espresso:espresso-core:3.2.0"
     androidTestImplementation "androidx.test.espresso:espresso-contrib:3.2.0"
     androidTestImplementation "androidx.test.espresso:espresso-intents:3.2.0"
-    androidTestImplementation "androidx.test.espresso:espresso-idling-resource:3.2.0"*/
+    androidTestImplementation "androidx.test.espresso:espresso-idling-resource:3.2.0"
 }
