--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,8 @@ dependencies {
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
     implementation "androidx.constraintlayout:constraintlayout:1.1.3"
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+
+    // MATERIAL DESIGN
     implementation "com.google.android.material:material:1.1.0"
 
     // KOTLIN
