Update gradle and change to javadoc generation

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,7 +62,7 @@ android {
     }
 
     dokka {
-        outputFormat = 'kotlin-website'
+        outputFormat = 'javadoc'
         outputDirectory = "$buildDir/dokka"
     }
 }
