--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,116 @@ android {
     dokka {
         outputFormat = 'javadoc'
         outputDirectory = "$buildDir/dokka"
+
+        configuration {
+            moduleName = 'app'
+            // Use to include or exclude non public members.
+            includeNonPublic = false
+            // Do not output deprecated members. Applies globally, can be overridden by packageOptions
+            skipDeprecated = false
+            // Emit warnings about not documented members. Applies globally, also can be overridden by packageOptions
+            reportUndocumented = true
+            // Do not create index pages for empty packages
+            skipEmptyPackages = true
+
+            // ???
+            // This is a list of platform names that will be shown in the final result. See the "Platforms" section of this readme
+            targets = ["JVM"]
+            // Platform used for code analysis. See the "Platforms" section of this readme
+            platform = "JVM"
+
+            // ???
+            // Property used for manual addition of files to the classpath
+            // This property does not override the classpath collected automatically but appends to it
+            /*classpath = [new File("$buildDir/other.jar")]*/
+
+            // ???
+            // List of files with module and package documentation
+            // https://kotlinlang.org/docs/reference/kotlin-doc.html#module-and-package-documentation
+            includes = ['packages.md', 'extra.md']
+
+            // List of files or directories containing sample code (referenced with @sample tags)
+            /*samples = ['samples/basic.kt', 'samples/advanced.kt']*/
+
+            // By default, sourceRoots are taken from Kotlin Plugin, subProjects and kotlinTasks, following roots will be appended to them
+            // Full form sourceRoot declaration
+            // Repeat for multiple sourceRoots
+            /*sourceRoot {
+                // Path to a source root
+                path = "src"
+            }*/
+
+            // These tasks will be used to determine source directories and classpath
+            /*kotlinTasks {
+                defaultKotlinTasks() + [':some:otherCompileKotlin', project("another").compileKotlin]
+            }*/
+
+            // Specifies the location of the project source code on the Web.
+            // If provided, Dokka generates "source" links for each declaration.
+            // Repeat for multiple mappings
+            sourceLink {
+                // Unix based directory relative path to the root of the project (where you execute gradle respectively).
+                path = "src/main/kotlin" // or simply "./"
+
+                // URL showing where the source code can be accessed through the web browser
+                url = "https://github.com/cy6erGn0m/vertx3-lang-kotlin/blob/master/src/main/kotlin" //remove src/main/kotlin if you use "./" above
+
+                // Suffix which is used to append the line number to the URL. Use #L for GitHub
+                lineSuffix = "#L"
+            }
+
+            // Used for linking to JDK documentation
+            jdkVersion = 9
+
+            // Disable linking to online kotlin-stdlib documentation
+            noStdlibLink = false
+
+            // Disable linking to online JDK documentation
+            noJdkLink = false
+
+            // ???
+            // Allows linking to documentation of the project's dependencies (generated with Javadoc or Dokka)
+            // Repeat for multiple links
+            /*externalDocumentationLink {
+                // Root URL of the generated documentation to link with. The trailing slash is required!
+
+                // https://en.ryte.com/wiki/Trailing_Slashes
+                // A trailing slash is the forward slash placed at the end of a URL. The trailing slash is
+                // generally used to mark a directory, and if a URL is not terminated using a trailing slash,
+                // this generally points to a file. However, these are guidelines, and not requirements.
+                url = new URL("https://example.com/docs/")
+
+                // If package-list file is located in non-standard location
+                // packageListUrl = new URL("file:///home/user/localdocs/package-list")
+            }*/
+
+            // Allows to customize documentation generation options on a per-package basis
+            // Repeat for multiple packageOptions
+            /*perPackageOption {
+                prefix = "kotlin" // will match kotlin and all sub-packages of it
+                // All options are optional, default values are below:
+                skipDeprecated = false
+                reportUndocumented = true   // Emit warnings about not documented members
+                includeNonPublic = false
+            }
+            // Suppress a package
+            perPackageOption {
+                prefix = "kotlin.internal" // will match kotlin.internal and all sub-packages of it
+                suppress = true
+            }*/
+
+            perPackageOption {
+                prefix = "br.com.example.sendmoney.view.ui"
+                skipDeprecated = false
+                reportUndocumented = true
+                includeNonPublic = true
+                suppress = false
+            }
+            perPackageOption {
+                prefix = "br.com.example.sendmoney"
+                suppress = true
+            }
+        }
     }
 }
 
